public_html/css/style.css
/* ... */
.d3up-table td.name.wearing {
	line-height: 20px;
}
tr.compared {
	background: #111;
}
tr.compared > td {
	padding: 10px;
}
tr.compared > td:first-child {
}
.compared td.diff table {
	line-height: 15px;
	font-size: 12px;
	border: 0;
	border-spacing:1px;
  border-collapse:collapse;
	
}
.compared td.diff table th,
.compared td.diff table td {
	width: auto;
	border: 0;
	background-color: #222;
	padding: 2px 5px;
	margin: 1px;
}
.compared td.diff table th {
	border-bottom: 1px solid #000;
}
.compared td.diff {
	overflow: auto; 
}
.compared td.diff table tr th,
.compared td.diff table tr td {
	text-align: center;
	border-right: 1px solid #000;
}
.compared td.diff table tr th {
	font-size: 0.75em;
}
.compared td.diff table tr td.bg-pos {
	background-color: #166E00;
}
.compared td.diff table tr td.bg-neg {
	background-color: #6A0000;
}
.compared-against {
	border-top: 2px solid #ccc;
	border-left: 2px solid #ccc;
	border-right: 2px solid #ccc;
}
.compared-to {
	border-bottom: 2px solid #ccc;
	border-left: 2px solid #ccc;
	border-right: 2px solid #ccc;
}
.ui-tabs-panel .d3up-table {
	border: 0;
}
#user-complete.d3up-table td.name {
	width: 250px;
}
.home .recent-items .d3up-table td.name {
	width: 200px;
}
.home .recent-items .d3up-table td.name .item-stats {
	text-align: left;
}
.table-filters {
	float: right;
}
.table-filters select {
	min-width: 150px;
}
.d3up-table .td-paginator {
	padding: 0;
}
.d3up-table .td-paginator div span,
.d3up-table .td-paginator div a {
	text-align: center;
	border-right: 1px solid #000;
	float: left;
	width: 36px;
	font-size: 13px;
	line-height: 28px;
}
.d3up-table .td-paginator div span:nth-child(2n),
.d3up-table .td-paginator div a:nth-child(2n) {
	background: #191919;
}
.table-header {
	margin: 0;
	text-transform: uppercase;
	color: #666;
	letter-spacing: 0.2em;
	font-size: 20px;
	margin-left: 20px;
}
.d3up-table td.sorting {
	line-height: 1em;
}
#quick-compared-input li {
	margin: 5px
}
#quick-compared-input input {
	width: 60px;
	margin: 0 5px;
}
/*Form Styles */

.zend_form {  
	margin:5px auto;  
	padding:0;  
	overflow:auto;  
}  

.zend_form dt{  
	padding:0;  
	clear:both;  
	width:25%;  
	float:left;  
	text-align:right;  
	margin:10px 15px 5px 0;  
	line-height: 1.4em;
}  

.zend_form dd {  
	padding:0;  
	float:left;  
	width:70%;  
	margin:5px 2px 5px 0;  
	line-height: 2em;
}  

#content .zend_form dd p {
	margin: 0;
}

.zend_form fieldset {
	border: 1px solid #ccc;
	padding: 10px;
	margin: 20px 10px;
}

.zend_form fieldset legend {
	font-weight: bold;
	text-transform: uppercase;
}

.zend_form input, 
.zend_form textarea,
.zend_form select {  
	width: 400px;
	margin:0 0 2px 0;  
	padding:0;  
}  
.zend_form input[type=submit],
.zend_form .buttons {
	width: 200px;
	margin: 0 auto;
	text-align: center;
}

.zend_form .required:after {
	content:' *'
}  
#content .zend_form li,
#content .zend_form ul {
	font-family: Verdana,Arial,Helvetica,sans-serif;
	font-size: 14px;
	font-weight: normal;
	margin: 0;
	padding: 2px 5px;	
}
#content .zend_form ul.errors {
	padding: 0;
	width: 400px;
	list-style: none;
}
#content .zend_form ul.errors li {
	color: #f00;
}

